[package]
authors = ["BezPowell <bez.powell@protonmail.com>"]
edition = "2018"
name = "blitz-path"
version = "0.1.0"
description = "Implementations of the A* and JPS pathfinding algorithms."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movingai = "1.1"
